Add rudimentary Backbone plumbing.

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <div id="map-editor"></div>
     <div id="layer-manager" class="manager">
         <h2>Layers</h2>
-        <ul id="layer-manager-layers">
-            <li><label><input type="checkbox" /> <span>Ground <em>(Tiles)</em></span></label></li>
-            <li><label><input type="checkbox" /> <span>Monsters <em>(Objects)</em></span></label></li>
+        <ul class="layer-manager-layers">
+            <!--<li><label><input type="checkbox" /> <span>Ground <em>(Tiles)</em></span></label></li>-->
+            <!--<li><label><input type="checkbox" /> <span>Monsters <em>(Objects)</em></span></label></li>-->
         </ul>
-        <div id="layer-manager-toolbar" class="toolbar">
-            <button id="layer-manager-toolbar-add-button"></button>
-            <button id="layer-manager-toolbar-up-button"></button>
-            <button id="layer-manager-toolbar-down-button"></button>
-            <button id="layer-manager-toolbar-duplicate-button"></button>
-            <button id="layer-manager-toolbar-remove-button"></button>
+        <div class="layer-manager-toolbar toolbar">
+            <button class="layer-manager-toolbar-add-button"></button>
+            <button class="layer-manager-toolbar-up-button"></button>
+            <button class="layer-manager-toolbar-down-button"></button>
+            <button class="layer-manager-toolbar-duplicate-button"></button>
+            <button class="layer-manager-toolbar-remove-button"></button>
         </div>
     </div>
     <div id="tile-set-manager" class="manager">
