Added layer removal.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
     <script id="layers-list-item-template" type="text/x-handlebars-template">
         <li class="layer-manager-layers-list-item">
-            <input type="checkbox" /> <span>{{ name }} <em>({{ type }})</em></span>
+            <input type="checkbox" /> <span><em>({{ type }})</em> {{ name }}</span>
         </li>
     </script>
 </body>
