--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <div id="tile-set-manager-tile-selector">
         </div>
         <div id="tile-set-manager-toolbar" class="toolbar">
-            <button id="tile-set-manager-toolbar-remove-button"></button>
+            <button class="tile-set-manager-toolbar-add-button"></button>
+            <button class="tile-set-manager-toolbar-remove-button"></button>
         </div>
     </div>
     <script id="layers-list-item-template" type="text/x-handlebars-template">
