Started adding tile set management.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>TMXjs Editor</title>
-    <script type="text/javascript" src="js/lib/require.js" data-main="js/main"></script>
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/colorbox/colorbox.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <script type="text/javascript" src="js/lib/require.js" data-main="js/main"></script>
 </head>
 <body>
     <div id="map-editor"></div>
@@ -35,6 +36,12 @@
         <div id="tile-set-manager-toolbar" class="toolbar">
             <button class="tile-set-manager-toolbar-add-button"></button>
             <button class="tile-set-manager-toolbar-remove-button"></button>
+        </div>
+    </div>
+    <div id="windows">
+        <div id="tile-set-add" class="window">
+            <h2>Tile Set</h2>
+            Test
         </div>
     </div>
     <script id="layers-list-item-template" type="text/x-handlebars-template">
