Added MapEditorView skeleton. Made it so the two ManagerViews will read existing Layer/TileSet info on initialization.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <script type="text/javascript" src="js/lib/require.js" data-main="js/main"></script>
 </head>
 <body>
-    <div id="map-editor"></div>
+    <div id="map-editor">
+        <div id="map-editor-cells">
+
+        </div>
+    </div>
     <div id="layer-manager" class="manager">
         <h2>Layers</h2>
         <ul class="layer-manager-layers">
