--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="map-editor">
-        <div id="map-editor-cells">
-
+        <div class="map-editor-cells">
+            <div class="map-editor-cell-selector"></div>
         </div>
     </div>
     <div id="layer-manager" class="manager">
@@ -77,6 +77,9 @@
             </form>
         </div>
     </div>
+    <script id="cell-selector-cell-template" type="text/x-handlebars-template">
+        <div data-index="{{ index }}" style='left: {{ x }}px; top: {{ y }}px; width: {{ w }}px; height: {{ h }}px;'></div>
+    </script>
     <script id="layers-item-template" type="text/x-handlebars-template">
         <li class="layer-manager-layers-item">
             <input type="checkbox" /> <span><em>({{ type }})</em> {{ name }}</span>
@@ -86,7 +89,7 @@
         <option value="{{ index }}">{{ name }}</option>
     </script>
     <script id="tile-sets-tile-template" type="text/x-handlebars-template">
-        <div style='width: {{ w }}px; height: {{ h }}px; background: url("{{ url }}") no-repeat -{{ x }}px -{{ y }}px;'></div>
+        <div data-index="{{ index }}"  style='width: {{ w }}px; height: {{ h }}px; background: url("{{ url }}") no-repeat -{{ x }}px -{{ y }}px;'></div>
     </script>
 </body>
 </html>
