Added preliminary code for the MainMenuView: it is now semi-transparent when unused and can be hidden. Fixed issue with dragging tiles on Firefox.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="main-menu" class="menu">
         <button class="main-menu-new-button"></button>
         <button class="main-menu-download-button"></button>
+        <div id="main-menu-toggle"></div>
     </div>
     <div id="map-editor">
         <div class="map-editor-cells">
