New Map button now works.

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                 <table>
                     <tr>
                         <th><label for="tile-set-editor-tile-width">Tile Width</label></th>
-                        <td><input type="text" name="tile-set-editor-tile-width" id="tile-set-editor-tile-width" /></td>
+                        <td><input type="text" name="tile-set-editor-tile-width" id="tile-set-editor-tile-width" disabled="disabled" /></td>
                         <th><label for="tile-set-editor-tile-margin">Tile Margin</label></th>
                         <td><input type="text" name="tile-set-editor-tile-margin" id="tile-set-editor-tile-margin" /></td>
                     </tr>
                     <tr>
                         <th><label for="tile-set-editor-tile-height">Tile Height</label></th>
-                        <td><input type="text" name="tile-set-editor-tile-height" id="tile-set-editor-tile-height" /></td>
+                        <td><input type="text" name="tile-set-editor-tile-height" id="tile-set-editor-tile-height" disabled="disabled" /></td>
                         <th><label for="tile-set-editor-tile-spacing">Tile Spacing</label></th>
                         <td><input type="text" name="tile-set-editor-tile-spacing" id="tile-set-editor-tile-spacing" /></td>
                     </tr>
