--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="main-menu" class="menu">
         <button class="main-menu-new-button"></button>
         <button class="main-menu-download-button"></button>
+        <button class="main-menu-undo-button"></button>
         <div id="main-menu-toggle"></div>
     </div>
     <div id="map-editor">
