--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>TMXjs Editor</title>
+    <title>Tilecraft</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/colorbox/colorbox.css" />
     <link rel="stylesheet" href="css/main.css" />
